force-app/main/default/objects/RE_Job_Run_Audit__c/RE_Job_Run_Audit__c.object-meta.xml
<CustomObject>
    <label>Job Run Audit</label>
    <nameField>
        <displayFormat>JR-{00000000}</displayFormat>
        <label>Job Run Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Run Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>