force-app/main/default/objects/RE_Job_Run_Audit__c/fields/Other_Comments__c.field-meta.xml
<CustomField>
    <fullName>Other_Comments__c</fullName>
    <description>Other comments related to job Audit</description>
    <label>Other Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>