force-app/main/default/objects/RE_Job_Run_Audit__c/fields/RE_Batch_Job_Ids__c.field-meta.xml
<CustomField>
    <fullName>RE_Batch_Job_Ids__c</fullName>
    <label>RE Batch Job Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>