force-app/main/default/objects/RE_Job_Run_Audit__c/fields/RE_Exception__c.field-meta.xml
<CustomField>
    <fullName>RE_Exception__c</fullName>
    <label>Exception</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>