force-app/main/default/objects/RE_Job_Run_Audit__c/fields/RE_IsSuccess__c.field-meta.xml
<CustomField>
    <fullName>RE_IsSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSuccess</label>
    <type>Checkbox</type>
</CustomField>