force-app/main/default/objects/RE_Job_Run_Audit__c/fields/RE_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Malaysia Output</fullName>
            </value>
            <value>
                <fullName>Singapore Output</fullName>
            </value>
            <value>
                <fullName>SG Midday Output</fullName>
            </value>
            <value>
                <fullName>Malaysia AMV Output</fullName>
            </value>
            <value>
                <fullName>Thailand Output</fullName>
            </value>
            <value>
                <fullName>CustomerOps Output</fullName>
            </value>
            <value>
                <fullName>New Contract Pricing Output</fullName>
            </value>
            <value>
                <fullName>Thailand AMV Output</fullName>
            </value>
            <value>
                <fullName>MY Export Report</fullName>
            </value>
            <value>
                <fullName>MY Customer Opps CBU</fullName>
            </value>
            <value>
                <fullName>Philippines Output</fullName>
            </value>
            <value>
                <fullName>Canada Daily Reuters Quote Move</fullName>
            </value>
            <value>
                <fullName>Canada Execute Depo Pricing</fullName>
            </value>
            <value>
                <fullName>Canada Pricing Recalculation</fullName>
            </value>
            <value>
                <fullName>Canada SFJ Record Creation</fullName>
            </value>
            <value>
                <fullName>Canada Live OPIS Spot Ticker Processing</fullName>
            </value>
            <value>
                <fullName>Canada Market Move Calculation</fullName>
            </value>
            <value>
                <fullName>Canada Competitor Data Processing</fullName>
            </value>
            <value>
                <fullName>Canada GSAP Upload</fullName>
            </value>
            <value>
                <fullName>Canada Email Output</fullName>
            </value>
            <value>
                <fullName>MY Data Analysis Report</fullName>
            </value>
            <value>
                <fullName>PH Customer Opps CBU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>