force-app/main/default/objects/RE_Job_Run_Audit__c/fields/RE_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>RE_Run_Time__c</fullName>
    <label>Run Time</label>
    <type>DateTime</type>
</CustomField>