force-app/main/default/objects/RE_Job_Run_Audit__c/fields/RE_Run_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Run_Type__c</fullName>
    <label>Run Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automate</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>