force-app/main/default/objects/RE_Job_Run_Audit__c/fields/RE_User__c.field-meta.xml
<CustomField>
    <fullName>RE_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Run_Audit</relationshipName>
    <type>Lookup</type>
</CustomField>