force-app/main/default/objects/RE_Job_Run_Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_IsSuccess__c</columns>
    <columns>RE_Exception__c</columns>
    <columns>RE_Job_Run_Count__c</columns>
    <columns>RE_Job_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RE_Run_Time__c</columns>
    <columns>RE_Run_Type__c</columns>
    <columns>RE_User__c</columns>
    <columns>RE_Job_Status__c</columns>
    <columns>Other_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RE_Job_Type__c</field>
        <operation>equals</operation>
        <value>Malaysia Output,Singapore Output,SG Midday Output,Malaysia AMV Output,CustomerOps Output,MY Export Report,MY Customer Opps CBU,Philippines Output,MY Data Analysis Report,PH Customer Opps CBU,PH Customer Opps</value>
    </filters>
    <label>All</label>
</ListView>