force-app/main/default/objects/RE_Job_Run_Audit__c/listViews/Canada.listView-meta.xml
<ListView>
    <fullName>Canada</fullName>
    <columns>NAME</columns>
    <columns>RE_Job_Type__c</columns>
    <columns>RE_Job_Status__c</columns>
    <columns>RE_Run_Type__c</columns>
    <columns>RE_Exception__c</columns>
    <columns>RE_Batch_Job_Ids__c</columns>
    <columns>Other_Comments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RE_Job_Type__c</field>
        <operation>equals</operation>
        <value>Canada Execute Depo Pricing,Canada Pricing Recalculation,Canada SFJ Record Creation,Canada Live OPIS Spot Ticker Processing,Canada Market Move Calculation,Canada Competitor Data Processing,Canada GSAP Upload,Canada Email Output</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Canada Pricing Job Audit</label>
</ListView>