force-app/main/default/objects/RE_Job_Run_Audit__c/listViews/test_som_list_view.listView-meta.xml
<ListView>
    <fullName>test_som_list_view</fullName>
    <columns>NAME</columns>
    <columns>RE_IsSuccess__c</columns>
    <columns>RE_Exception__c</columns>
    <columns>RE_Job_Run_Count__c</columns>
    <columns>RE_Job_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RE_Run_Time__c</columns>
    <columns>RE_Run_Type__c</columns>
    <columns>RE_User__c</columns>
    <columns>RE_Job_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RE_Job_Type__c</field>
        <operation>equals</operation>
        <value>Malaysia Output,Malaysia AMV Output,MY Export Report,MY Customer Opps CBU,MY Data Analysis Report</value>
    </filters>
    <label>test som list view</label>
</ListView>